# Nginx-log-analyzer

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  log_analyzer.py  pyproject.toml
.github/workflows/: checks.yml
config/: config.json  config_2.json
log_analyzer/: log_analyzer.py
reports/: report-2017.06.30.html
tests/: test_log_analyzer.py
tests/user_config/: config_1.json
