[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = ""
authors = ["chernyshevd <dmitrychernyshev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
datetime = "^5.5"
logging = "^0.4.9.6"
pathlib = "^1.0.1"
statistics = "^1.0.3.5"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.1"
pylint = "^3.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
